--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  margin: 0;
   background: linear-gradient(90deg, #49464f 0, #373240 100%);
 }
 
@@ -104,6 +105,7 @@ ul {
 
 #main-header a {
   text-decoration: none;
+  display: inline-block;
   color: #c6a8f5;
   padding: 0.25rem 0;
   border-bottom: 2px solid transparent;
@@ -178,7 +180,7 @@ ul {
 
 #sessions-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   gap: 3rem;
   border-radius: 6px;
   margin: 1rem 0;
@@ -198,7 +200,7 @@ ul {
 
 .session-item img {
   width: 100%;
-  height: 12rem;
+  max-height: 12rem;
   object-fit: cover;
 }
 
@@ -240,8 +242,8 @@ ul {
 }
 
 #session-page img {
-  width: 30rem;
-  height: 20rem;
+  max-width: 30rem;
+  max-height: 20rem;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 2rem;
@@ -303,8 +305,60 @@ ul {
     opacity: 0;
     transform: translateY(-1rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+
+
+
+@media (max-width: 524px) {
+  #main-header {
+    flex-wrap: wrap;
+    width: 90%;
+  }
+
+  #main-header h1 {
+    text-align: center;
+    flex-grow: 1;
+    margin-bottom: 20px;
+  }
+
+  #home-page {
+    width: 90%;
+  }
+
+  #home-page section:nth-child(odd),
+  #home-page section {
+    flex-direction: column;
+  }
+
+
+  #home-page img {
+    align-self: center;
+  }
+
+  #home-page h3 {
+    text-align: center;
+  }
+
+  #sessions-page {
+    width: 90%;
+  }
+
+  #session-page {
+    width: 90%;
+  }
+
+  #session-page header {
+    flex-direction: column;
+  }
+
+  #session-page img {
+    max-width: 30rem;
+  }
+
 }
